@@ -1,1 +1,1 @@
-DIST classic_theme_restorer_customize_australis-1.2.3-fx.xpi 371596 SHA256 600b4a9ca32b166ba898c20ee0f1b43beebebec23114a3a20c4a58d96274f295 SHA512 8351a8e22b6c3915f8119498a0c9e79e2ce96865bacd6d147b64b0805854032fed02cfee2159be1a45bd714445de49e3a5f131bac8a488e639c18eb5361ed3d8 WHIRLPOOL 6d7ff536692272eca3ffdc4b560d850b102b3315d9cbbc0f2fb23f5bf911feb354c107d3409134c357238ec654c77bdb33997e48350d92b17293891430c7917c
+DIST classic_theme_restorer_customize_ui-1.2.5-fx.xpi 398450 SHA256 816b51dbf6be42006369033672e183713f3665626e39f25fee189d2333c949a0 SHA512 8d9822355d38f174773c1d99b1e468a07d8acb28c22ea65ca51222c9009300a55116a7e968dc9240431b4554546d357cf6c0447cf3b744c0d558a07dbad777d5 WHIRLPOOL 1f9fe052816b3b35d37cd0923eac7972edf55d2e640801e4ce458de1e1269965b7805edd31e81735ad0be8aa65a332b2e6a6ed3431e8d8c95b11a5d4d24291f3
