@@ -7,10 +7,10 @@ MV_MOZ_MOZILLAS="firefox"
 inherit mv_mozextension
 RESTRICT="mirror"
 
-mPN="${PN//-/_}_customize_australis-${PV}"
+mPN="${PN//-/_}_customize_ui-${PV}"
 DESCRIPTION="Firefox plugin: restore partially the functionality of non-broken firefox versions"
 HOMEPAGE="https://addons.mozilla.org/de/firefox/addon/classicthemerestorer/"
-SRC_URI=" https://addons.cdn.mozilla.net/storage/public-staging/472577/${mPN}-fx.xpi"
+SRC_URI="https://addons.cdn.mozilla.net/user-media/addons/472577/${mPN}-fx.xpi"
 
 LICENSE="GPL-2"
 SLOT="0"
