@@ -1,1 +1,1 @@
-DIST duckduckgo_plus-0.4.2-fx.xpi 137181 SHA256 7b988423f266acc6e3fec45809c5a8b22e4abdc9571c20c1b7baea81e0866c1b SHA512 113ec3c459a952ceebeb9c860255c2fb6afe340288ea94486a857f9bd404aeb869cc85943f4af8416c9dfda39aa0a9508d95fd71134e600ec240b61306405868 WHIRLPOOL 082c2583c518ac08834172616a5c27448541cad5edd03f09f80971337a9fabdbd8702e617c838b15a480f337d02046c63518b659bccd30abe3e49fb32160ae68
+DIST duckduckgo_plus-0.4.6-fx.xpi 133308 SHA256 4eab28af69cf3da53ead79699031d2b1ef931694a1f93a00d91860d3ef07264e SHA512 a61b698f52d5f2cf12de927ec5d526d365d5b803fc57d0f7a58f7196cbd5d90b434c66b85d0c553fc1550ea084b8cb832d7270f6978d7cee60bfd8ae7c191b08 WHIRLPOOL 9537e99dec4b4de5ce7794e93307ec0c3761b6b64c0c04b4d046bfb14a56eaaedbaf6c4e79cc24ebf2f8e897f5ef949f3c64e16c007efeb7961698bc4badde67
