@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*classic-theme-restorer-1.2.5 (02 Nov 2014)
+
+  02 Nov 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *classic-theme-restorer-1.2.3 (22 Aug 2014)
 
   22 Aug 2014; Martin Väth <martin@mvath.de>:
